# wordcount

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.challenge  LICENSE-MIT  README.md  docker-compose.yml
src/: ahocorasick.rs  fourtytwo.rs  main.rs  naive.rs
src/aho_corasick/: ahocorasick.rs  automaton.rs  dfa.rs  mod.rs  nfa.rs  state_id.rs
