[package]
name = "wordcount"
version = "1.0.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Solution for the Wordcount Coding Challenge 2019"
homepage = "https://github.com/dnaka91/wordcount"
repository = "https://github.com/dnaka91/wordcount"
keywords = ["aho-corasick", "big-data", "counting"]
categories = ["command-line-utilities"]
exclude = ["docs/**"]

[dependencies]
getopts = "0.2.21"
indexmap = "1.8.2"
rayon = "1.5.3"

[profile.release]
lto = true
panic = "abort"
